# Kickflip

./: LICENSE
backend/: app.py  pyproject.toml  requirements.txt
backend/griptape_nodes/agents/base_agent_node/: BaseAgent.py
frontend/my-react-flow-app/: package-lock.json  package.json
frontend/my-react-flow-app/src/: App.tsx
frontend/my-react-flow-app/src/components/: AgentNode.tsx  ImageGenerationOutputNode.tsx  InputNode.tsx  NodeMenu.tsx  OutputNode.tsx
frontend/my-react-flow-app/src/pages/: Flow.tsx
frontend/my-react-flow-app/src/store/: api.ts
