[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["William Price <82848178+william-price01@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
griptape = {extras = ["all"], version = "^0.29.1"}
flask = "^3.0.3"
flask-cors = "^4.0.1"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
